// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StudentCard StudentCard component should match the snapshot when the student has all times available 1`] = `
<section
  className="StudentCard"
>
  <h3
    className="StudentCard--header"
  >
    Hillary
     (
    she/her
    )
  </h3>
  <div
    className="StudentCard--profile"
  >
    <img
      alt="Hillary"
      className="StudentCard--image"
      src="http://www.image.com/hill.jpeg"
    />
    <div
      className="StudentCard--skills-div"
    >
      <p
        className="StudentCard--skills-p"
      >
        Skills
      </p>
      <ul
        className="StudentCard--ul"
      >
        <li
          className="StudentCard-li"
          key="0"
        >
          react
        </li>
        <li
          className="StudentCard-li"
          key="1"
        >
          redux
        </li>
      </ul>
    </div>
  </div>
  <div
    className="StudentCard--div--rows"
  >
    <div>
      <p
        className="StudentCard-time-text"
      >
        8:00 - 8:50 a.m.
      </p>
      <button
        className="StudentCard--btn"
        disabled={false}
        id="morning"
        onClick={[Function]}
      >
        Book Pairing
      </button>
    </div>
    <div>
      <p
        className="StudentCard-time-text"
      >
        12:00 - 12:50 p.m.
      </p>
      <button
        className="StudentCard--btn"
        disabled={false}
        id="lunch"
        onClick={[Function]}
      >
        Book Pairing
      </button>
    </div>
    <div>
      <p
        className="StudentCard-time-text"
      >
        4:10 - 5:00 p.m.
      </p>
      <button
        className="StudentCard--btn"
        disabled={false}
        id="afternoon"
        onClick={[Function]}
      >
        Book Pairing
      </button>
    </div>
  </div>
</section>
`;

exports[`StudentCard StudentCard component should match the snapshot when the student has no available times 1`] = `
<section
  className="StudentCard"
>
  <h3
    className="StudentCard--header"
  >
    Hillary
     (
    she/her
    )
  </h3>
  <div
    className="StudentCard--profile"
  >
    <img
      alt="Hillary"
      className="StudentCard--image"
      src="http://www.image.com/hill.jpeg"
    />
    <div
      className="StudentCard--skills-div"
    >
      <p
        className="StudentCard--skills-p"
      >
        Skills
      </p>
      <ul
        className="StudentCard--ul"
      >
        <li
          className="StudentCard-li"
          key="0"
        >
          react
        </li>
        <li
          className="StudentCard-li"
          key="1"
        >
          redux
        </li>
      </ul>
    </div>
  </div>
  <div
    className="StudentCard--div--rows"
  >
    <div>
      <p
        className="StudentCard-time-text"
      >
        8:00 - 8:50 a.m.
      </p>
      <p>
        NOT AVAILABLE
      </p>
    </div>
    <div>
      <p
        className="StudentCard-time-text"
      >
        12:00 - 12:50 p.m.
      </p>
      <p>
        NOT AVAILABLE
      </p>
    </div>
    <div>
      <p
        className="StudentCard-time-text"
      >
        4:10 - 5:00 p.m.
      </p>
      <p>
        NOT AVAILABLE
      </p>
    </div>
  </div>
</section>
`;

exports[`StudentCard StudentCard component should match the snapshot when the student has some times available 1`] = `
<section
  className="StudentCard"
>
  <h3
    className="StudentCard--header"
  >
    Hillary
     (
    she/her
    )
  </h3>
  <div
    className="StudentCard--profile"
  >
    <img
      alt="Hillary"
      className="StudentCard--image"
      src="http://www.image.com/hill.jpeg"
    />
    <div
      className="StudentCard--skills-div"
    >
      <p
        className="StudentCard--skills-p"
      >
        Skills
      </p>
      <ul
        className="StudentCard--ul"
      >
        <li
          className="StudentCard-li"
          key="0"
        >
          react
        </li>
        <li
          className="StudentCard-li"
          key="1"
        >
          redux
        </li>
      </ul>
    </div>
  </div>
  <div
    className="StudentCard--div--rows"
  >
    <div>
      <p
        className="StudentCard-time-text"
      >
        8:00 - 8:50 a.m.
      </p>
      <p>
        NOT AVAILABLE
      </p>
    </div>
    <div>
      <p
        className="StudentCard-time-text"
      >
        12:00 - 12:50 p.m.
      </p>
      <button
        className="StudentCard--btn"
        disabled={false}
        id="lunch"
        onClick={[Function]}
      >
        Book Pairing
      </button>
    </div>
    <div>
      <p
        className="StudentCard-time-text"
      >
        4:10 - 5:00 p.m.
      </p>
      <p>
        NOT AVAILABLE
      </p>
    </div>
  </div>
</section>
`;
